--- a/src/pages/compute/containers/Instance/Detail/BaseDetail/index.less
+++ b/src/pages/compute/containers/Instance/Detail/BaseDetail/index.less
@@ -93,7 +93,7 @@
         padding: @min-space 0;
 
         .attached-volume-line {
-          width: 60px;
+          width: 34px;
           height: 52px;
           border-bottom: @topo-line;
         }
